Wed May 17 11:29:55 2000  Gray Watson  <gray@256.com>

	* Releasing dmalloc version 4.6.0.

	* Fixed an incompatibility with the dmalloc_t -r, sbrk, and the
 	DEBUG_ALLOW_NONLINEAR flag.

	* Improved the implementation of the NEVER_REUSE flag.  Found
 	problems with the dmalloc_t -r random debug flag.

	* Added BUILD.txt instructions to the repository.

Tue May 16 14:34:14 2000  Gray Watson  <gray@256.com>

	* Added BLOCK_ROUND macros to heap.h.

	* Made initial attempt to protect blocks in chunk.c.  Got pretty
 	hairy way too fast so backed it out.

	* Added SET_POINTER macro and cleaned some code.

	* Completely reworked the internal initialization values for the
	environmental variables to fix problems pointed out by Carlton
	Teel.  I was doing a (unsigned int)-1.  Yuck.

	* Fixed a bug found by Mcvey where the 1st dblock allocation in a
	block would not have been found in non-freed memory lists.  Yuck.

Mon May 15 11:46:21 2000  Gray Watson  <gray@256.com>

	* Moved to 'make cxx' and 'make installcxx' for building and
	installing the C++ version of the library.

	* Added autoconfiguration of the presence of a C++ compiler so it
	will attempt to build and install libdmallocxx.a if it can.

	* Removed DMALLOC_VERIFY_[NO]ERROR and replaced with
	DMALLOC_[NO]ERROR.

	* dmalloc_examine now returns DMALLOC_[NO]ERROR not [NO]ERROR.

	* Added initial mprotect configuration and stub function to the
	library.

Mon May  8 08:19:45 2000  Gray Watson  <gray@256.com>

	* Renamed dmalloc.cc to dmallocc.cc and added the building of
	libdmalloc++.a per Dimitri's comments.

	* Renamed rpm.spec to dmalloc.rpm per Dimitri's comments.

Mon May  1 20:34:18 2000  Gray Watson  <gray@256.com>

	* Fixed some more function headers.

Tue Apr 18 15:41:30 2000  Gray Watson  <gray@256.com>

	* Releasing dmalloc version 4.5.2.

	* Added DGUX notes from Takis Psarogiannakopoulos.

	* Fixed bug in chunk.c pointer checking.  Thanks Ezra.

Mon Apr 17 21:55:39 2000  Gray Watson  <gray@256.com>
